# src/models/index.ts
@@ -1,1 +1,2 @@
 export * from './userModel';
+export * from './paginationModel';
