# src/models/userModel.ts
@@ -1,11 +1,15 @@
 export interface IUserModel {
-  id: string;
-  name: string;
+  id?: string;
+  username: string;
+  firstName: string;
+  lastName: string;
 }
 
 export class UserModel implements IUserModel {
   public id: string = null;
-  public name: string = null;
+  public username: string = null;
+  public firstName: string = null;
+  public lastName: string = null;
 
   constructor(args: any) {
     if (!args) throw new Error(`${UserModel.name}'s args are missing`);
